metadata/unpackaged/objects/Exchange_Rates__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Buying_Exchange_Rate__c</fullName>
        <label>Buying Exchange Rate</label>
        <precision>7</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <label>Currency</label>
        <picklist>
            <picklistValues>
                <fullName>EUR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GBI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>USI</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Domestic_Currency__c</fullName>
        <label>Domestic Currency</label>
        <picklist>
            <picklistValues>
                <fullName>EUR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GBI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>USI</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <label>Effective Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Exchange_Rate_GBP__c</fullName>
        <label>Exchange Rate GBP</label>
        <precision>6</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Exchange_Rate_USD__c</fullName>
        <label>Exchange Rate USD</label>
        <precision>6</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Selling_Exchange_Rate__c</fullName>
        <label>Selling Exchange Rate</label>
        <precision>7</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Syteline_User_Initials__c</fullName>
        <label>Syteline User Initials</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <label>Exchange Rates</label>
    <nameField>
        <label>Exchange Rates Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Exchange Rates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>